export interface IMcpComponent {
  addTools(): void;
  addResources(): void;
  addPrompts(): void;
}
